página inicial da sa

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
   <!-- navbar -->
   <nav>
       <ul class="navegador">
-          <li><a href="#outlet">Outlet</a></li>
-          <li><a href="#corrida">Corrida</a></li>
+          <li><a href="./index.html" class="active">Início</a></li>
+          <li><a href="./outlet.html">Outlet</a></li>
+          <li><a href="./corrida.html">Corrida</a></li>
           <li><a href="#kart">Kart</a></li>
-          <li style="float:right"><a class="active" href="./carrinho.html">🛒</a></li>
+          <li style="float:right"><a class="active" href="#carrinho">🛒</a></li>
         </ul>
 
   </nav>
@@ -90,11 +91,11 @@
           <div class="card__overlay">
             <div class="card__header">                
               <div class="card__header-text">
-                <h3 class="card__title">Sapatilha</h3>        
+                <h3 class="card__title">Capacete</h3>        
                 <span class="card__status">R$350.00</span>
               </div>
             </div>
-            <p class="card__description">É sapatilha de corrida, não de balé. Não confunda os dois, sério, não confunda.</p>
+            <p class="card__description">É um capacete muito bacana, normalmente usado na cabeça. Talvez ele te proteja a um ataque de elefantes, nunca se sabe.</p>
           </div>
         </a>
       </li>  
@@ -141,18 +142,17 @@
           <div class="card__overlay">
             <div class="card__header">                 
               <div class="card__header-text">
-                <h3 class="card__title">Sapatilha</h3>        
+                <h3 class="card__title">Capacete</h3>        
                 <span class="card__status">R$350.00</span>
               </div>
             </div>
-            <p class="card__description">É sapatilha de corrida, não de balé. Não confunda os dois, sério, não confunda.</p>
+            <p class="card__description">É um capacete muito bacana, normalmente usado na cabeça. Talvez ele te proteja a um ataque de elefantes, nunca se sabe.</p>
           </div>
         </a>
       </li>  
     </ul>
 <footer>
     <div class="container">
-        <h3>Informações</h3>
         <ul class="links">
           <li>
             <a href="./sobrenos.html">Quem somos nós </a>
