novo cadastro e login

--- a/corrida.html
+++ b/corrida.html
@@ -16,6 +16,7 @@
           <li><a href="./index.html">Início</a></li>
           <li><a href="./outlet.html">Outlet</a></li>
           <li><a href="./corrida.html" class="active">Corrida</a></li>
+          <li><a href="./moto.html">Moto</a></li>
           <li><a href="./kart.html">Kart</a></li>
           <li style="float:right"><a class="active" href="#about">🛒</a></li>
         </ul>
@@ -216,7 +217,7 @@
         <ul class="links">
           <li>
             <a href="/sobrenos.html">Quem somos nós </a>
-            <a href="/suporte.html">Como podemos ajudar? </a>
+            <a href="./suporte.html">Como podemos ajudar? </a>
             <a href="/suporte.html">Nossas redes sociais! </a>
           </li>
 
