--- a/moto.html
+++ b/moto.html
@@ -16,14 +16,14 @@
           <li><a href="./index.html">Início</a></li>
           <li><a href="./outlet.html">Outlet</a></li>
           <li><a href="./corrida.html">Corrida</a></li>
-          <li><a href="./moto.html">Moto</a></li>
-          <li><a href="./kart.html" class="active">Kart</a></li>
+          <li><a href="./moto.html" class="active">Moto</a></li>
+          <li><a href="./kart.html">Kart</a></li>
           <li style="float:right"><a class="active" href="#about">🛒</a></li>
         </ul>
   </nav>
 
     <div class="title">
-        <h2>Produtos de Kart</h2>
+        <h2>Produtos de Moto</h2>
         <h3>12 produtos encontrados!</h3>
         <br>
         <br>
@@ -32,43 +32,43 @@
         <ul class="cards">
           <li>
             <a href="" class="card">
-              <img src="./imgkart/capacete1.png"  class="card__image" alt="" />
+              <img src="./imgmoto/capacetemoto1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
-                    <h3 class="card__title">Capacete Arai Sk6 Branco</h3>       
-                    <span class="card__status">R$2.699,00</span>
+                    <h3 class="card__title"> Capacete Mx Fox V1 Weld Black Iridium</h3>       
+                    <span class="card__status">R$1.599,00</span>
                   </div>
                 </div>
-                <p class="card__description">Capacete Kart n°1</p>
+                <p class="card__description">Capacete Moto n°3</p>
               </div>
             </a>      
           </li>
           <li>
             <a href="" class="card">
-              <img src="./imgkart/capacete2.jpg" class="card__image" alt="" />
+              <img src="./imgmoto/capacetemoto2.png" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Capacete Norisk FF391 Preto c/ Rosa</h3>
-                    <span class="card__status">R$499,00</span>
+                    <h3 class="card__title">Capacete Shark OpenLine Prime</h3>
+                    <span class="card__status">R$1.399,00</span>
                   </div>
                 </div>
-                <p class="card__description">Capacete Kart n°2</p>
+                <p class="card__description">Capacete Moto n°2.</p>
               </div>
             </a>
           </li>
           <li>
             <a href="" class="card">
-              <img src="./imgkart/capacete3.png" class="card__image" alt="" />
+              <img src="./imgmoto/capacetemoto3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
-                    <h3 class="card__title">Capacete Integral K3 SV Multi MPLK</h3>        
-                    <span class="card__status">R$1.349,00</span>
+                    <h3 class="card__title">Capacete Fox V1 Mvrs Prix Fluo Orange</h3>        
+                    <span class="card__status">R$1.099,00</span>
                   </div>
                 </div>
-                <p class="card__description">Capacete Kart n°3</p>
+                <p class="card__description">Capacete Moto n°3.</p>
               </div>
             </a>
           </li>  
@@ -78,43 +78,43 @@
         <ul class="cards">
           <li>
             <a href="" class="card">
-              <img src="./imgkart/macacaokart1.png" class="card__image" alt="" />
+              <img src="./imgmoto/macacaomoto1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
-                    <h3 class="card__title">Macacão MP20 Pailler Racing Vermelho</h3>       
-                    <span class="card__status">R$800,00</span>
+                    <h3 class="card__title"> Macacão Asw Image Mandala 21</h3>       
+                    <span class="card__status">R$399,00</span>
                   </div>
                 </div>
-                <p class="card__description">Macacão Kart n°1</p>
+                <p class="card__description">Macacão Moto n°1</p>
               </div>
             </a>      
           </li>
           <li>
             <a href="" class="card">
-              <img src="./imgkart/macacãokart2.jpg" class="card__image" alt="" />
+              <img src="./imgmoto/macacaomoto2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Macacão Fem. Savancini Absolut Preto</h3>
-                    <span class="card__status">R$349,00</span>
+                    <h3 class="card__title"> Macacão Fem. Asw Image Fade </h3>
+                    <span class="card__status">R$349,50</span>
                   </div>
                 </div>
-                <p class="card__description">Macacão Kart n°2</p>
+                <p class="card__description">Macacão Moto n°2</p>
               </div>
             </a>
           </li>
           <li>
             <a href="" class="card">
-              <img src="./imgkart/macacaokart3.jpg" class="card__image" alt="" />
+              <img src="./imgmoto/macacaomoto3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
-                    <h3 class="card__title">Macacão Revit Hyperspeed Preto c/ Vermelho M56-XL</h3>        
-                    <span class="card__status">R$7.999,00</span>
+                    <h3 class="card__title"> Macacão Alpinestars GP Pro V2 Tech-Air</h3>        
+                    <span class="card__status">R$7.799,00</span>
                   </div>
                 </div>
-                <p class="card__description">Macacão Kart n°3.</p>
+                <p class="card__description">Macacão Moto n°3.</p>
               </div>
             </a>
           </li>  
@@ -124,89 +124,89 @@
         <ul class="cards">
           <li>
             <a href="" class="card">
-              <img src="./imgkart/luvakart1.png" class="card__image" alt="" />
+              <img src="./imgmoto/luvamoto1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
-                    <h3 class="card__title">Luva OMP KS-2R</h3>       
-                    <span class="card__status">R$999,00</span>
+                    <h3 class="card__title">Luva Ims Power Verde c/ Azul</h3>       
+                    <span class="card__status">R$89,90</span>
                   </div>
                 </div>
-                <p class="card__description">Luva Kart n°1 </p>
+                <p class="card__description">Luva Moto n°1</p>
               </div>
             </a>      
           </li>
           <li>
             <a href="" class="card">
-              <img src="./imgkart/luvakart2.png" class="card__image" alt="" />
+              <img src="./imgmoto/luvamoto2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Luva Alpinestars Kart Tech-1k V2 Branca</h3>
-                    <span class="card__status">R$499,00</span>
-                  </div>
-                </div>
-                <p class="card__description">Luva Kart n°2.</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="" class="card">
-              <img src="./imgkart/luvakart3.png" class="card__image" alt="" />
-              <div class="card__overlay">
-                <div class="card__header">                 
-                  <div class="card__header-text">
-                    <h3 class="card__title">Luva 38s Branco c/ Preto</h3>        
-                    <span class="card__status">R$350.00</span>
-                  </div>
-                </div>
-                <p class="card__description">Luva Kart n°3</p>
-              </div>
-            </a>
-          </li>  
-        </ul>
-
-        <!-- card -->
-        <ul class="cards">
-          <li>
-            <a href="" class="card">
-              <img src="./imgkart/sapatilha1.jpg" class="card__image" alt="" />
-              <div class="card__overlay">
-                <div class="card__header">                
-                  <div class="card__header-text">
-                    <h3 class="card__title">Sapatilha Everlast Jump Fem.</h3>       
+                    <h3 class="card__title">Luva QEPAE Fem. Multicores</h3>
                     <span class="card__status">R$99,00</span>
                   </div>
                 </div>
-                <p class="card__description">Sapatilha Kart n°1</p>
-              </div>
-            </a>      
-          </li>
-          <li>
-            <a href="" class="card">
-              <img src="./imgkart/sapatilha2.jpg" class="card__image" alt="" />
-              <div class="card__overlay">        
-                <div class="card__header">             
-                  <div class="card__header-text">
-                    <h3 class="card__title">Sapatilha OMP Racing First 2020 Red </h3>
-                    <span class="card__status">R$1.899,00</span>
-                  </div>
-                </div>
-                <p class="card__description">Sapatilha Kart n°2.</p>
+                <p class="card__description">Luva Moto n°2.</p>
               </div>
             </a>
           </li>
           <li>
             <a href="" class="card">
-              <img src="./imgkart/sapatilha3.jpg" class="card__image" alt="" />
+              <img src="./imgmoto/luvamoto3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
-                    <h3 class="card__title"> Sapatilha OMP KS-ART</h3>        
-                    <span class="card__status">R$1.299,00</span>
+                    <h3 class="card__title">Luva Asw Mass Fluor</h3>        
+                    <span class="card__status">R$149,90</span>
                   </div>
                 </div>
-                <p class="card__description">Sapatilha Kart n°3.</p>
+                <p class="card__description">Luva Moto n°3.</p>
+              </div>
+            </a>
+          </li>  
+        </ul>
+
+        <!-- card -->
+        <ul class="cards">
+          <li>
+            <a href="" class="card">
+              <img src="./imgmoto/botamoto1.png" class="card__image" alt="" />
+              <div class="card__overlay">
+                <div class="card__header">                
+                  <div class="card__header-text">
+                    <h3 class="card__title">Bota Fox Instinct Amarelo Fluor</h3>       
+                    <span class="card__status">R$2.699,90</span>
+                  </div>
+                </div>
+                <p class="card__description">Bota Moto n°1</p>
+              </div>
+            </a>      
+          </li>
+          <li>
+            <a href="" class="card">
+              <img src="./imgmoto/botamoto2.png" class="card__image" alt="" />
+              <div class="card__overlay">        
+                <div class="card__header">             
+                  <div class="card__header-text">
+                    <h3 class="card__title">Bota Gaerne SG12 New</h3>
+                    <span class="card__status">R$4.999,90</span>
+                  </div>
+                </div>
+                <p class="card__description">Bota Moto n°2</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="" class="card">
+              <img src="./imgmoto/botamoto3.png" class="card__image" alt="" />
+              <div class="card__overlay">
+                <div class="card__header">                 
+                  <div class="card__header-text">
+                    <h3 class="card__title">Bota Red Dragon Action</h3>        
+                    <span class="card__status">R$499,00</span>
+                  </div>
+                </div>
+                <p class="card__description">Bota Moto n°3.</p>
               </div>
             </a>
           </li>  
