--- a/outlet.html
+++ b/outlet.html
@@ -16,6 +16,7 @@
           <li><a href="./index.html">Início</a></li>
           <li><a href="./outlet.html" class="active">Outlet</a></li>
           <li><a href="./corrida.html">Corrida</a></li>
+          <li><a href="./moto.html">Moto</a></li>
           <li><a href="./kart.html">Kart</a></li>
           <li style="float:right"><a class="active" href="#about">🛒</a></li>
         </ul>
@@ -31,43 +32,43 @@
         <ul class="cards">
           <li>
             <a href="" class="card">
-              <img src="./img/macacasso2.png" class="card__image" alt="" />
+              <img src="./imgoutlet/balaclavaout1.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
-                    <h3 class="card__title">Macacão</h3>       
+                    <h3 class="card__title">Balaclava 1</h3>       
                     <span class="card__status">R$1.000.00</span>
                   </div>
                 </div>
-                <p class="card__description">Macacão vermelho bonito e divertido eba eba iiiihhhhaaaaaaa</p>
+                <p class="card__description">Balaclava n°1</p>
               </div>
             </a>      
           </li>
           <li>
             <a href="" class="card">
-              <img src="./img/lucas.png" class="card__image" alt="" />
+              <img src="./imgoutlet/balaclavaout2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Luvas</h3>
+                    <h3 class="card__title">Balaclava 2</h3>
                     <span class="card__status">R$500.00</span>
                   </div>
                 </div>
-                <p class="card__description">Luvas do Lucas, sim, nós roubamos dele.</p>
+                <p class="card__description">Balaclava n°2.</p>
               </div>
             </a>
           </li>
           <li>
             <a href="" class="card">
-              <img src="./img/caçapete.png" class="card__image" alt="" />
+              <img src="./imgoutlet/balaclavaout3.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
-                    <h3 class="card__title">Capacete</h3>        
+                    <h3 class="card__title">Balaclava 3</h3>        
                     <span class="card__status">R$350.00</span>
                   </div>
                 </div>
-                <p class="card__description">É um capacete muito bacana, normalmente usado na cabeça. Talvez ele te proteja a um ataque de elefantes, nunca se sabe.</p>
+                <p class="card__description">Balaclava n°3.</p>
               </div>
             </a>
           </li>  
@@ -77,43 +78,43 @@
         <ul class="cards">
           <li>
             <a href="" class="card">
-              <img src="./img/macacasso2.png" class="card__image" alt="" />
+              <img src="./imgoutlet/conjuntout1.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
-                    <h3 class="card__title">Macacão</h3>       
+                    <h3 class="card__title">Conjunto Feminino</h3>       
                     <span class="card__status">R$1.000.00</span>
                   </div>
                 </div>
-                <p class="card__description">Macacão vermelho bonito e divertido eba eba iiiihhhhaaaaaaa</p>
+                <p class="card__description">Conjunto Feminino.</p>
               </div>
             </a>      
           </li>
           <li>
             <a href="" class="card">
-              <img src="./img/lucas.png" class="card__image" alt="" />
+              <img src="./imgoutlet/conjuntout2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Luvas</h3>
+                    <h3 class="card__title">Conjunto Masculino</h3>
                     <span class="card__status">R$500.00</span>
                   </div>
                 </div>
-                <p class="card__description">Luvas do Lucas, sim, nós roubamos dele.</p>
+                <p class="card__description">Conjunto Masculino.</p>
               </div>
             </a>
           </li>
           <li>
             <a href="" class="card">
-              <img src="./img/caçapete.png" class="card__image" alt="" />
+              <img src="./imgoutlet/jaquetaout1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
-                    <h3 class="card__title">Capacete</h3>        
+                    <h3 class="card__title">Jaqueta de Couro</h3>        
                     <span class="card__status">R$350.00</span>
                   </div>
                 </div>
-                <p class="card__description">É um capacete muito bacana, normalmente usado na cabeça. Talvez ele te proteja a um ataque de elefantes, nunca se sabe.</p>
+                <p class="card__description">Jaqueta de Couro.</p>
               </div>
             </a>
           </li>  
@@ -123,43 +124,43 @@
         <ul class="cards">
           <li>
             <a href="" class="card">
-              <img src="./img/macacasso2.png" class="card__image" alt="" />
+              <img src="./imgoutlet/calcaout1.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
-                    <h3 class="card__title">Macacão</h3>       
+                    <h3 class="card__title">Calça 1</h3>       
                     <span class="card__status">R$1.000.00</span>
                   </div>
                 </div>
-                <p class="card__description">Macacão vermelho bonito e divertido eba eba iiiihhhhaaaaaaa</p>
+                <p class="card__description">Calça n°1.</p>
               </div>
             </a>      
           </li>
           <li>
             <a href="" class="card">
-              <img src="./img/lucas.png" class="card__image" alt="" />
+              <img src="./imgoutlet/calcaout2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Luvas</h3>
+                    <h3 class="card__title">Calça 2</h3>
                     <span class="card__status">R$500.00</span>
                   </div>
                 </div>
-                <p class="card__description">Luvas do Lucas, sim, nós roubamos dele.</p>
+                <p class="card__description">Calça n°2.</p>
               </div>
             </a>
           </li>
           <li>
             <a href="" class="card">
-              <img src="./img/caçapete.png" class="card__image" alt="" />
+              <img src="./imgoutlet/macacaoout1.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
-                    <h3 class="card__title">Capacete</h3>        
+                    <h3 class="card__title">Macacão Outlet 1</h3>        
                     <span class="card__status">R$350.00</span>
                   </div>
                 </div>
-                <p class="card__description">É um capacete muito bacana, normalmente usado na cabeça. Talvez ele te proteja a um ataque de elefantes, nunca se sabe.</p>
+                <p class="card__description">Macacão Outlet n°1.</p>
               </div>
             </a>
           </li>  
@@ -169,43 +170,43 @@
         <ul class="cards">
           <li>
             <a href="" class="card">
-              <img src="./img/macacasso2.png" class="card__image" alt="" />
+              <img src="./imgoutlet/botaout1.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
-                    <h3 class="card__title">Macacão</h3>       
+                    <h3 class="card__title">Bota Outlet 1</h3>       
                     <span class="card__status">R$1.000.00</span>
                   </div>
                 </div>
-                <p class="card__description">Macacão vermelho bonito e divertido eba eba iiiihhhhaaaaaaa</p>
+                <p class="card__description">Bota Outlet n°1.</p>
               </div>
             </a>      
           </li>
           <li>
             <a href="" class="card">
-              <img src="./img/lucas.png" class="card__image" alt="" />
+              <img src="./imgoutlet/botaout2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Luvas</h3>
+                    <h3 class="card__title">Bota Outlet 2</h3>
                     <span class="card__status">R$500.00</span>
                   </div>
                 </div>
-                <p class="card__description">Luvas do Lucas, sim, nós roubamos dele.</p>
+                <p class="card__description">Bota Outlet n°2.</p>
               </div>
             </a>
           </li>
           <li>
             <a href="" class="card">
-              <img src="./img/caçapete.png" class="card__image" alt="" />
+              <img src="./imgoutlet/botaout3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
-                    <h3 class="card__title">Capacete</h3>        
+                    <h3 class="card__title">Bota Outlet 3</h3>        
                     <span class="card__status">R$350.00</span>
                   </div>
                 </div>
-                <p class="card__description">É um capacete muito bacana, normalmente usado na cabeça. Talvez ele te proteja a um ataque de elefantes, nunca se sabe.</p>
+                <p class="card__description">Bota Outlet n°3.</p>
               </div>
             </a>
           </li>  
@@ -216,7 +217,7 @@
         <ul class="links">
           <li>
             <a href="/sobrenos.html">Quem somos nós </a>
-            <a href="/suporte.html">Como podemos ajudar? </a>
+            <a href="./suporte.html">Como podemos ajudar? </a>
             <a href="/suporte.html">Nossas redes sociais! </a>
           </li>
 
