--- a/A SA/index.html
+++ b/A SA/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./estilo.css">
 </head>
 <body>
-  <header><img class="img-logo" src="./img/logo.png" alt=""></header>
+  <header><img class="img-logo" src="./img/img/logo.png" alt=""></header>
 
   <!-- navbar -->
   <nav>
@@ -28,7 +28,7 @@
   <div class="slideshow-container">
 
     <div class="mySlides fade">
-      <img src="./img/imgincial3.jpg" style="width:100%">
+      <img src="./img/img/imgincial3.jpg" style="width:100%">
     </div>
     
     <div class="mySlides fade">
@@ -54,8 +54,7 @@
     <br>
     <br>
 
-    <small class="nominho">Produtos em</small><br>
-    <strong class="nominho">Destaque!</strong>
+    <h2 class="nominho">Produtos em Destaque!</h2>
     
     <!-- card -->
     <ul class="cards">
