--- a/A SA/kart.html
+++ b/A SA/kart.html
@@ -14,16 +14,16 @@
   <nav>
       <ul class="navegador">
           <li><a href="./index.html">Início</a></li>
-          <li><a href="./outlet.html" class="active">Outlet</a></li>
+          <li><a href="./outlet.html">Outlet</a></li>
           <li><a href="./corrida.html">Corrida</a></li>
           <li><a href="./moto.html">Moto</a></li>
-          <li><a href="./kart.html">Kart</a></li>
+          <li><a href="./kart.html" class="active">Kart</a></li>
           <li style="float:right"><a class="active" href="#about">🛒</a></li>
         </ul>
   </nav>
 
     <div class="title">
-        <h2>Produtos do Outlet</h2>
+        <h2>Produtos de Kart</h2>
         <h3>12 produtos encontrados!</h3>
         <br>
         <br>
@@ -32,43 +32,43 @@
         <ul class="cards">
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/balaclavaout1.jpg" class="card__image" alt="" />
+              <img src="./imgkart/capacete1.png"  class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
-                    <h3 class="card__title">Balaclava DryUV Paddoci Azul</h3>       
-                    <span class="card__status">R$44,90</span>
+                    <h3 class="card__title">Capacete Arai Sk6 Branco</h3>       
+                    <span class="card__status">R$2.699,00</span>
                   </div>
                 </div>
-                <p class="card__description">Balaclava n°1</p>
+                <p class="card__description">Capacete Kart n°1</p>
               </div>
             </a>      
           </li>
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/balaclavaout2.jpg" class="card__image" alt="" />
+              <img src="./imgkart/capacete2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Balaclava Aberta Eparco Vermelha </h3>
-                    <span class="card__status">R$59,90</span>
+                    <h3 class="card__title">Capacete Norisk FF391 Preto c/ Rosa</h3>
+                    <span class="card__status">R$499,00</span>
                   </div>
                 </div>
-                <p class="card__description">Balaclava n°2.</p>
+                <p class="card__description">Capacete Kart n°2</p>
               </div>
             </a>
           </li>
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/balaclavaout3.jpg" class="card__image" alt="" />
+              <img src="./imgkart/capacete3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
-                    <h3 class="card__title">Balaclava Ski Cap</h3>        
-                    <span class="card__status">R$79,99</span>
+                    <h3 class="card__title">Capacete Integral K3 SV Multi MPLK</h3>        
+                    <span class="card__status">R$1.349,00</span>
                   </div>
                 </div>
-                <p class="card__description">Balaclava n°3.</p>
+                <p class="card__description">Capacete Kart n°3</p>
               </div>
             </a>
           </li>  
@@ -78,43 +78,89 @@
         <ul class="cards">
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/conjuntout1.jpg" class="card__image" alt="" />
+              <img src="./imgkart/macacaokart1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
-                    <h3 class="card__title"> Conjunto Capa de Chuva Pole Racing</h3>       
-                    <span class="card__status">R$349,90</span>
+                    <h3 class="card__title">Macacão MP20 Pailler Racing Vermelho</h3>       
+                    <span class="card__status">R$800,00</span>
                   </div>
                 </div>
-                <p class="card__description">Conjunto Feminino.</p>
+                <p class="card__description">Macacão Kart n°1</p>
               </div>
             </a>      
           </li>
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/conjuntout2.jpg" class="card__image" alt="" />
+              <img src="./imgkart/macacãokart2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Conjunto Capa de Chuva Nave </h3>
-                    <span class="card__status">R$199,99</span>
+                    <h3 class="card__title">Macacão Fem. Savancini Absolut Preto</h3>
+                    <span class="card__status">R$349,00</span>
                   </div>
                 </div>
-                <p class="card__description">Conjunto Masculino.</p>
+                <p class="card__description">Macacão Kart n°2</p>
               </div>
             </a>
           </li>
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/jaquetaout1.png" class="card__image" alt="" />
+              <img src="./imgkart/macacaokart3.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
-                    <h3 class="card__title">Jaqueta de Couro Masculina Black Goth</h3>        
+                    <h3 class="card__title">Macacão Revit Hyperspeed Preto c/ Vermelho M56-XL</h3>        
+                    <span class="card__status">R$7.999,00</span>
+                  </div>
+                </div>
+                <p class="card__description">Macacão Kart n°3.</p>
+              </div>
+            </a>
+          </li>  
+        </ul>
+
+        <!-- card -->
+        <ul class="cards">
+          <li>
+            <a href="" class="card">
+              <img src="./imgkart/luvakart1.png" class="card__image" alt="" />
+              <div class="card__overlay">
+                <div class="card__header">                
+                  <div class="card__header-text">
+                    <h3 class="card__title">Luva OMP KS-2R</h3>       
+                    <span class="card__status">R$999,00</span>
+                  </div>
+                </div>
+                <p class="card__description">Luva Kart n°1 </p>
+              </div>
+            </a>      
+          </li>
+          <li>
+            <a href="" class="card">
+              <img src="./imgkart/luvakart2.png" class="card__image" alt="" />
+              <div class="card__overlay">        
+                <div class="card__header">             
+                  <div class="card__header-text">
+                    <h3 class="card__title">Luva Alpinestars Kart Tech-1k V2 Branca</h3>
+                    <span class="card__status">R$499,00</span>
+                  </div>
+                </div>
+                <p class="card__description">Luva Kart n°2.</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="" class="card">
+              <img src="./imgkart/luvakart3.png" class="card__image" alt="" />
+              <div class="card__overlay">
+                <div class="card__header">                 
+                  <div class="card__header-text">
+                    <h3 class="card__title">Luva 38s Branco c/ Preto</h3>        
                     <span class="card__status">R$350.00</span>
                   </div>
                 </div>
-                <p class="card__description">Jaqueta de Couro.</p>
+                <p class="card__description">Luva Kart n°3</p>
               </div>
             </a>
           </li>  
@@ -124,89 +170,43 @@
         <ul class="cards">
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/calcaout1.jpg" class="card__image" alt="" />
+              <img src="./imgkart/sapatilha1.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
-                    <h3 class="card__title">Calça LS2 Chart Lady Black Red</h3>       
-                    <span class="card__status">R$749,90</span>
+                    <h3 class="card__title">Sapatilha Everlast Jump Fem.</h3>       
+                    <span class="card__status">R$99,00</span>
                   </div>
                 </div>
-                <p class="card__description">Calça n°1.</p>
+                <p class="card__description">Sapatilha Kart n°1</p>
               </div>
             </a>      
           </li>
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/calcaout2.jpg" class="card__image" alt="" />
+              <img src="./imgkart/sapatilha2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Calça Feminina Downhill Factory Rosa</h3>
-                    <span class="card__status">R$229,99</span>
+                    <h3 class="card__title">Sapatilha OMP Racing First 2020 Red </h3>
+                    <span class="card__status">R$1.899,00</span>
                   </div>
                 </div>
-                <p class="card__description">Calça n°2.</p>
+                <p class="card__description">Sapatilha Kart n°2.</p>
               </div>
             </a>
           </li>
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/macacaoout1.jpg" class="card__image" alt="" />
+              <img src="./imgkart/sapatilha3.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
-                    <h3 class="card__title">Macacão Texx Diana 2</h3>        
-                    <span class="card__status">R$1499,90</span>
+                    <h3 class="card__title"> Sapatilha OMP KS-ART</h3>        
+                    <span class="card__status">R$1.299,00</span>
                   </div>
                 </div>
-                <p class="card__description">Macacão Outlet n°1.</p>
-              </div>
-            </a>
-          </li>  
-        </ul>
-
-        <!-- card -->
-        <ul class="cards">
-          <li>
-            <a href="" class="card">
-              <img src="./imgoutlet/botaout1.jpg" class="card__image" alt="" />
-              <div class="card__overlay">
-                <div class="card__header">                
-                  <div class="card__header-text">
-                    <h3 class="card__title"> Bota Militar Franboots</h3>       
-                    <span class="card__status">R$169,99</span>
-                  </div>
-                </div>
-                <p class="card__description">Bota Outlet n°1.</p>
-              </div>
-            </a>      
-          </li>
-          <li>
-            <a href="" class="card">
-              <img src="./imgoutlet/botaout2.jpg" class="card__image" alt="" />
-              <div class="card__overlay">        
-                <div class="card__header">             
-                  <div class="card__header-text">
-                    <h3 class="card__title">Bota Acero Speed</h3>
-                    <span class="card__status">R$249,90</span>
-                  </div>
-                </div>
-                <p class="card__description">Bota Outlet n°2.</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="" class="card">
-              <img src="./imgoutlet/botaout3.png" class="card__image" alt="" />
-              <div class="card__overlay">
-                <div class="card__header">                 
-                  <div class="card__header-text">
-                    <h3 class="card__title">Bota Pantaneiro</h3>        
-                    <span class="card__status">R$109,99</span>
-                  </div>
-                </div>
-                <p class="card__description">Bota Outlet n°3.</p>
+                <p class="card__description">Sapatilha Kart n°3.</p>
               </div>
             </a>
           </li>  
