--- a/A SA/moto.html
+++ b/A SA/moto.html
@@ -14,16 +14,16 @@
   <nav>
       <ul class="navegador">
           <li><a href="./index.html">Início</a></li>
-          <li><a href="./outlet.html" class="active">Outlet</a></li>
+          <li><a href="./outlet.html">Outlet</a></li>
           <li><a href="./corrida.html">Corrida</a></li>
-          <li><a href="./moto.html">Moto</a></li>
+          <li><a href="./moto.html" class="active">Moto</a></li>
           <li><a href="./kart.html">Kart</a></li>
           <li style="float:right"><a class="active" href="#about">🛒</a></li>
         </ul>
   </nav>
 
     <div class="title">
-        <h2>Produtos do Outlet</h2>
+        <h2>Produtos de Moto</h2>
         <h3>12 produtos encontrados!</h3>
         <br>
         <br>
@@ -32,43 +32,43 @@
         <ul class="cards">
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/balaclavaout1.jpg" class="card__image" alt="" />
+              <img src="./imgmoto/capacetemoto1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
-                    <h3 class="card__title">Balaclava DryUV Paddoci Azul</h3>       
-                    <span class="card__status">R$44,90</span>
+                    <h3 class="card__title"> Capacete Mx Fox V1 Weld Black Iridium</h3>       
+                    <span class="card__status">R$1.599,00</span>
                   </div>
                 </div>
-                <p class="card__description">Balaclava n°1</p>
+                <p class="card__description">Capacete Moto n°3</p>
               </div>
             </a>      
           </li>
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/balaclavaout2.jpg" class="card__image" alt="" />
+              <img src="./imgmoto/capacetemoto2.png" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Balaclava Aberta Eparco Vermelha </h3>
-                    <span class="card__status">R$59,90</span>
+                    <h3 class="card__title">Capacete Shark OpenLine Prime</h3>
+                    <span class="card__status">R$1.399,00</span>
                   </div>
                 </div>
-                <p class="card__description">Balaclava n°2.</p>
+                <p class="card__description">Capacete Moto n°2.</p>
               </div>
             </a>
           </li>
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/balaclavaout3.jpg" class="card__image" alt="" />
+              <img src="./imgmoto/capacetemoto3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
-                    <h3 class="card__title">Balaclava Ski Cap</h3>        
-                    <span class="card__status">R$79,99</span>
+                    <h3 class="card__title">Capacete Fox V1 Mvrs Prix Fluo Orange</h3>        
+                    <span class="card__status">R$1.099,00</span>
                   </div>
                 </div>
-                <p class="card__description">Balaclava n°3.</p>
+                <p class="card__description">Capacete Moto n°3.</p>
               </div>
             </a>
           </li>  
@@ -78,43 +78,43 @@
         <ul class="cards">
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/conjuntout1.jpg" class="card__image" alt="" />
+              <img src="./imgmoto/macacaomoto1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
-                    <h3 class="card__title"> Conjunto Capa de Chuva Pole Racing</h3>       
-                    <span class="card__status">R$349,90</span>
+                    <h3 class="card__title"> Macacão Asw Image Mandala 21</h3>       
+                    <span class="card__status">R$399,00</span>
                   </div>
                 </div>
-                <p class="card__description">Conjunto Feminino.</p>
+                <p class="card__description">Macacão Moto n°1</p>
               </div>
             </a>      
           </li>
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/conjuntout2.jpg" class="card__image" alt="" />
+              <img src="./imgmoto/macacaomoto2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Conjunto Capa de Chuva Nave </h3>
-                    <span class="card__status">R$199,99</span>
+                    <h3 class="card__title"> Macacão Fem. Asw Image Fade </h3>
+                    <span class="card__status">R$349,50</span>
                   </div>
                 </div>
-                <p class="card__description">Conjunto Masculino.</p>
+                <p class="card__description">Macacão Moto n°2</p>
               </div>
             </a>
           </li>
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/jaquetaout1.png" class="card__image" alt="" />
+              <img src="./imgmoto/macacaomoto3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
-                    <h3 class="card__title">Jaqueta de Couro Masculina Black Goth</h3>        
-                    <span class="card__status">R$350.00</span>
+                    <h3 class="card__title"> Macacão Alpinestars GP Pro V2 Tech-Air</h3>        
+                    <span class="card__status">R$7.799,00</span>
                   </div>
                 </div>
-                <p class="card__description">Jaqueta de Couro.</p>
+                <p class="card__description">Macacão Moto n°3.</p>
               </div>
             </a>
           </li>  
@@ -124,43 +124,43 @@
         <ul class="cards">
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/calcaout1.jpg" class="card__image" alt="" />
+              <img src="./imgmoto/luvamoto1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
-                    <h3 class="card__title">Calça LS2 Chart Lady Black Red</h3>       
-                    <span class="card__status">R$749,90</span>
+                    <h3 class="card__title">Luva Ims Power Verde c/ Azul</h3>       
+                    <span class="card__status">R$89,90</span>
                   </div>
                 </div>
-                <p class="card__description">Calça n°1.</p>
+                <p class="card__description">Luva Moto n°1</p>
               </div>
             </a>      
           </li>
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/calcaout2.jpg" class="card__image" alt="" />
+              <img src="./imgmoto/luvamoto2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Calça Feminina Downhill Factory Rosa</h3>
-                    <span class="card__status">R$229,99</span>
+                    <h3 class="card__title">Luva QEPAE Fem. Multicores</h3>
+                    <span class="card__status">R$99,00</span>
                   </div>
                 </div>
-                <p class="card__description">Calça n°2.</p>
+                <p class="card__description">Luva Moto n°2.</p>
               </div>
             </a>
           </li>
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/macacaoout1.jpg" class="card__image" alt="" />
+              <img src="./imgmoto/luvamoto3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
-                    <h3 class="card__title">Macacão Texx Diana 2</h3>        
-                    <span class="card__status">R$1499,90</span>
+                    <h3 class="card__title">Luva Asw Mass Fluor</h3>        
+                    <span class="card__status">R$149,90</span>
                   </div>
                 </div>
-                <p class="card__description">Macacão Outlet n°1.</p>
+                <p class="card__description">Luva Moto n°3.</p>
               </div>
             </a>
           </li>  
@@ -170,43 +170,43 @@
         <ul class="cards">
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/botaout1.jpg" class="card__image" alt="" />
+              <img src="./imgmoto/botamoto1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
-                    <h3 class="card__title"> Bota Militar Franboots</h3>       
-                    <span class="card__status">R$169,99</span>
+                    <h3 class="card__title">Bota Fox Instinct Amarelo Fluor</h3>       
+                    <span class="card__status">R$2.699,90</span>
                   </div>
                 </div>
-                <p class="card__description">Bota Outlet n°1.</p>
+                <p class="card__description">Bota Moto n°1</p>
               </div>
             </a>      
           </li>
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/botaout2.jpg" class="card__image" alt="" />
+              <img src="./imgmoto/botamoto2.png" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Bota Acero Speed</h3>
-                    <span class="card__status">R$249,90</span>
+                    <h3 class="card__title">Bota Gaerne SG12 New</h3>
+                    <span class="card__status">R$4.999,90</span>
                   </div>
                 </div>
-                <p class="card__description">Bota Outlet n°2.</p>
+                <p class="card__description">Bota Moto n°2</p>
               </div>
             </a>
           </li>
           <li>
             <a href="" class="card">
-              <img src="./imgoutlet/botaout3.png" class="card__image" alt="" />
+              <img src="./imgmoto/botamoto3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
-                    <h3 class="card__title">Bota Pantaneiro</h3>        
-                    <span class="card__status">R$109,99</span>
+                    <h3 class="card__title">Bota Red Dragon Action</h3>        
+                    <span class="card__status">R$499,00</span>
                   </div>
                 </div>
-                <p class="card__description">Bota Outlet n°3.</p>
+                <p class="card__description">Bota Moto n°3.</p>
               </div>
             </a>
           </li>  
