--- a/login.html
+++ b/login.html
@@ -23,12 +23,12 @@
   
                   <div class="email">
                     <label for="email_login">Seu e-mail</label> <br><br>
-                    <input id="input" name="email_login" required="required" type="text" placeholder="contato@htmlecsspro.com"/>
+                    <input id="email" name="email_login" required="required" type="text" placeholder="contato@htmlecsspro.com"/>
                   </div><br><br>
                   
                   <div class="senha">
                     <label for="senha_login">Sua senha</label><br> <br>
-                    <input id="input" name="senha_login" required="required" type="password" placeholder="1234" />
+                    <input id="senha" name="senha_login" required="required" type="password" placeholder="1234" />
                   </div><br><br>
                   
                   <div class="row">
