--- a/kart.html
+++ b/kart.html
@@ -19,6 +19,8 @@
           <li><a href="./moto.html">Moto</a></li>
           <li><a href="./kart.html" class="active">Kart</a></li>
           <li style="float:right"><a class="active" href="#about">🛒</a></li>
+          <li style="float:right"><a href="./login.html" class="cadlog">Login</a></li>
+          <li style="float:right"><a href="./cadastro.html" class="cadlog">Cadastro</a></li>
         </ul>
   </nav>
 
