--- a/cadastro.html
+++ b/cadastro.html
@@ -43,7 +43,7 @@
                 
 
                     <div class="aviso">
-                        <button onclick="enter" id="cadastrar" ><b>Confirmar</b></button>
+                        <button onclick="enter" id="cad" ><b>Confirmar</b></button>
                     </div>
             </center>
         <a id="log" href=".//login.html" target="blank"><b>Faça Login</b></a>
