--- a/corrida.html
+++ b/corrida.html
@@ -19,8 +19,6 @@
           <li><a href="./moto.html">Moto</a></li>
           <li><a href="./kart.html">Kart</a></li>
           <li style="float:right"><a class="active" href="#about">🛒</a></li>
-          <li style="float:right"><a href="./login.html" class="cadlog">Login</a></li>
-          <li style="float:right"><a href="./cadastro.html" class="cadlog">Cadastro</a></li>
         </ul>
   </nav>
 
@@ -33,7 +31,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./capaceteracing1.html" class="card">
               <img src="./imgracing/capaceteracing1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -47,13 +45,13 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
-              <img src="./imgracing/capaceteracing3.png" class="card__image" alt="" />
+            <a href="./capaceteracing2.html" class="card">
+              <img src="./imgracing/capaceteracing2.png" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Capacete Shark Evoline S3</h3>
-                    <span class="card__status">R$2.499,99</span>
+                    <h3 class="card__title"> Capacete Ayrton Senna Réplica</h3>
+                    <span class="card__status"> R$849,90</span>
                   </div>
                 </div>
                 <p class="card__description">Capacete n°2.</p>
@@ -61,13 +59,13 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
-              <img src="./imgracing/capaceteracing2.png" class="card__image" alt="" />
+            <a href="./capaceteracing3.html" class="card">
+              <img src="./imgracing/capaceteracing3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
-                    <h3 class="card__title">Capacete Ayrton Senna Réplica</h3>        
-                    <span class="card__status">R$849,90</span>
+                    <h3 class="card__title">Capacete Shark Evoline S3</h3>        
+                    <span class="card__status">R$2.499,99</span>
                   </div>
                 </div>
                 <p class="card__description">Capacete n°3.</p>
@@ -79,7 +77,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./macacaoracing1.html" class="card">
               <img src="./imgracing/macacaoracing1.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -93,7 +91,7 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./macacaoracing2.html" class="card">
               <img src="./imgracing/macacaoracing2.png" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
@@ -107,7 +105,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./macacaoracing3.html" class="card">
               <img src="./imgracing/macacaoracing3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
@@ -125,7 +123,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./luvaracing1.html" class="card">
               <img src="./imgracing/luvaracing1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -139,30 +137,30 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
-              <img src="./img/lucas.png" class="card__image" alt="" />
+            <a href="./luvaracing2.html" class="card">
+              <img src="./imgracing/luvaracing2.png" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Luvas</h3>
-                    <span class="card__status">R$500.00</span>
+                    <h3 class="card__title">Luva Corsa EvoKart</h3>
+                    <span class="card__status">R$129,90</span>
                   </div>
                 </div>
-                <p class="card__description">Luvas do Lucas, sim, nós roubamos dele.</p>
+                <p class="card__description">Luvas Racing n°2.</p>
               </div>
             </a>
           </li>
           <li>
-            <a href="" class="card">
-              <img src="./img/caçapete.png" class="card__image" alt="" />
+            <a href="./luvaracing3.html" class="card">
+              <img src="./imgracing/luvaracing3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
-                    <h3 class="card__title">Capacete</h3>        
-                    <span class="card__status">R$350.00</span>
+                    <h3 class="card__title">Luva Racing Rabbit</h3>        
+                    <span class="card__status">R$329,90</span>
                   </div>
                 </div>
-                <p class="card__description">É um capacete muito bacana, normalmente usado na cabeça. Talvez ele te proteja a um ataque de elefantes, nunca se sabe.</p>
+                <p class="card__description">Luva Racing n°3.</p>
               </div>
             </a>
           </li>  
@@ -171,7 +169,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./sapatilharacing1.html" class="card">
               <img src="./imgracing/sapatilharacing1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -185,13 +183,13 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./sapatilharacing2.html" class="card">
               <img src="./imgracing/sapatilharacing2.png" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Luvas</h3>
-                    <span class="card__status">R$500.00</span>
+                    <h3 class="card__title">Sapatilha Racing First 2020 OMP</h3>
+                    <span class="card__status">R$1.849,90</span>
                   </div>
                 </div>
                 <p class="card__description">Sapatilha n°2.</p>
@@ -199,7 +197,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./sapatilharacing3.html" class="card">
               <img src="./imgracing/sapatilharacing3.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
