--- a/kart.html
+++ b/kart.html
@@ -19,8 +19,6 @@
           <li><a href="./moto.html">Moto</a></li>
           <li><a href="./kart.html" class="active">Kart</a></li>
           <li style="float:right"><a class="active" href="#about">🛒</a></li>
-          <li style="float:right"><a href="./login.html" class="cadlog">Login</a></li>
-          <li style="float:right"><a href="./cadastro.html" class="cadlog">Cadastro</a></li>
         </ul>
   </nav>
 
@@ -33,7 +31,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./capacetekart1.html" class="card">
               <img src="./imgkart/capacete1.png"  class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -47,7 +45,7 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./capacetekart2.html" class="card">
               <img src="./imgkart/capacete2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
@@ -61,7 +59,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./capacetekart3.html" class="card">
               <img src="./imgkart/capacete3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
@@ -79,7 +77,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./macacaokart1.html" class="card">
               <img src="./imgkart/macacaokart1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -93,7 +91,7 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./macacaokart2.html" class="card">
               <img src="./imgkart/macacãokart2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
@@ -107,7 +105,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./macacaokart3.html" class="card">
               <img src="./imgkart/macacaokart3.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
@@ -125,13 +123,13 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./luvakart1.html" class="card">
               <img src="./imgkart/luvakart1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
                     <h3 class="card__title">Luva OMP KS-2R</h3>       
-                    <span class="card__status">R$999,00</span>
+                    <span class="card__status">R$999,90</span>
                   </div>
                 </div>
                 <p class="card__description">Luva Kart n°1 </p>
@@ -139,13 +137,13 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./luvakart2.html" class="card">
               <img src="./imgkart/luvakart2.png" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
                     <h3 class="card__title">Luva Alpinestars Kart Tech-1k V2 Branca</h3>
-                    <span class="card__status">R$499,00</span>
+                    <span class="card__status">R$499,99</span>
                   </div>
                 </div>
                 <p class="card__description">Luva Kart n°2.</p>
@@ -153,13 +151,13 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./luvakart3.html" class="card">
               <img src="./imgkart/luvakart3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
                     <h3 class="card__title">Luva 38s Branco c/ Preto</h3>        
-                    <span class="card__status">R$350.00</span>
+                    <span class="card__status">R$349,99</span>
                   </div>
                 </div>
                 <p class="card__description">Luva Kart n°3</p>
@@ -171,7 +169,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./sapatilhakart1.html" class="card">
               <img src="./imgkart/sapatilha1.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -185,7 +183,7 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./sapatilhakart2.html" class="card">
               <img src="./imgkart/sapatilha2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
@@ -199,7 +197,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./sapatilhakart3.html" class="card">
               <img src="./imgkart/sapatilha3.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
