--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
     <!-- card -->
     <ul class="cards">
       <li>
-        <a href="" class="card">
+        <a href="./capacetemoto3.html" class="card">
           <img src="./imgmoto/capacetemoto3.png" class="card__image" alt="" />
           <div class="card__overlay">
             <div class="card__header">                   
               <div class="card__header-text">
                 <h3 class="card__title">Capacete Fox V1 Mvrs Prix Fluo Orange</h3>            
-                <span class="card__status">R$1.099,00</span>
+                <span class="card__status">R$1.199,99</span>
               </div>
             </div>
             <p class="card__description">Produto destaque n°1.</p>
@@ -77,21 +77,21 @@
         </a>      
       </li>
       <li>
-        <a href="" class="card">
+        <a href="./macacaokart2.html" class="card">
           <img src="./imgkart/macacãokart2.jpg" class="card__image" alt="" />
           <div class="card__overlay">        
             <div class="card__header">             
               <div class="card__header-text">
                 <h3 class="card__title">Macacão Fem. Savancini Absolut Preto</h3>
-                <span class="card__status">R$349,00</span>
+                <span class="card__status">R$349,99</span>
               </div>
             </div>
-            <p class="card__description">Produto destaque n°2.</p>
+            <p class="card__description">Produto destaque n°2 .</p>
           </div>
         </a>
       </li>
       <li>
-        <a href="" class="card">
+        <a href="./capaceteracing1.html" class="card">
           <img src="./imgracing/capaceteracing1.png" class="card__image" alt="" />
           <div class="card__overlay">
             <div class="card__header">                
@@ -115,13 +115,13 @@
     <!-- card -->
     <ul class="cards">
       <li>
-        <a href="" class="card">
+        <a href="./sapatilhakart1.html" class="card">
           <img src="./imgkart/sapatilha1.jpg" class="card__image" alt="" />
           <div class="card__overlay">
             <div class="card__header">                
               <div class="card__header-text">
                 <h3 class="card__title">Sapatilha Everlast Jump Fem.</h3>       
-                <span class="card__status">R$99,00</span>
+                <span class="card__status">R$99,90</span>
               </div>
             </div>
             <p class="card__description">Promoção n°1.</p>
@@ -129,7 +129,7 @@
         </a>      
       </li>
       <li>
-        <a href="" class="card">
+        <a href="./luvaracing1.html" class="card">
           <img src="./imgracing/luvaracing1.png" class="card__image" alt="" />
           <div class="card__overlay">        
             <div class="card__header">             
@@ -143,7 +143,7 @@
         </a>
       </li>
       <li>
-        <a href="" class="card">
+        <a href="./sapatilharacing1.html" class="card">
           <img src="./imgracing/sapatilharacing1.png" class="card__image" alt="" />
           <div class="card__overlay">
             <div class="card__header">                 
