--- a/moto.html
+++ b/moto.html
@@ -19,8 +19,6 @@
           <li><a href="./moto.html" class="active">Moto</a></li>
           <li><a href="./kart.html">Kart</a></li>
           <li style="float:right"><a class="active" href="#about">🛒</a></li>
-          <li style="float:right"><a href="./login.html" class="cadlog">Login</a></li>
-          <li style="float:right"><a href="./cadastro.html" class="cadlog">Cadastro</a></li>
         </ul>
   </nav>
 
@@ -33,13 +31,13 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./capacetemoto1.html" class="card">
               <img src="./imgmoto/capacetemoto1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
                     <h3 class="card__title"> Capacete Mx Fox V1 Weld Black Iridium</h3>       
-                    <span class="card__status">R$1.599,00</span>
+                    <span class="card__status">R$1.599,90</span>
                   </div>
                 </div>
                 <p class="card__description">Capacete Moto n°3</p>
@@ -47,13 +45,13 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./capacetemoto2.html" class="card">
               <img src="./imgmoto/capacetemoto2.png" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
                     <h3 class="card__title">Capacete Shark OpenLine Prime</h3>
-                    <span class="card__status">R$1.399,00</span>
+                    <span class="card__status">R$1.399,99</span>
                   </div>
                 </div>
                 <p class="card__description">Capacete Moto n°2.</p>
@@ -61,13 +59,13 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./capacetemoto3.html" class="card">
               <img src="./imgmoto/capacetemoto3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
                     <h3 class="card__title">Capacete Fox V1 Mvrs Prix Fluo Orange</h3>        
-                    <span class="card__status">R$1.099,00</span>
+                    <span class="card__status">R$1.199,99</span>
                   </div>
                 </div>
                 <p class="card__description">Capacete Moto n°3.</p>
@@ -79,13 +77,13 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./macacaomoto1.html" class="card">
               <img src="./imgmoto/macacaomoto1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
                   <div class="card__header-text">
                     <h3 class="card__title"> Macacão Asw Image Mandala 21</h3>       
-                    <span class="card__status">R$399,00</span>
+                    <span class="card__status">R$399,90</span>
                   </div>
                 </div>
                 <p class="card__description">Macacão Moto n°1</p>
@@ -93,13 +91,13 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./macacaomoto2.html" class="card">
               <img src="./imgmoto/macacaomoto2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
                     <h3 class="card__title"> Macacão Fem. Asw Image Fade </h3>
-                    <span class="card__status">R$349,50</span>
+                    <span class="card__status">R$349,49</span>
                   </div>
                 </div>
                 <p class="card__description">Macacão Moto n°2</p>
@@ -107,13 +105,13 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./macacaomoto3.html" class="card">
               <img src="./imgmoto/macacaomoto3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
                     <h3 class="card__title"> Macacão Alpinestars GP Pro V2 Tech-Air</h3>        
-                    <span class="card__status">R$7.799,00</span>
+                    <span class="card__status">R$7.799,90</span>
                   </div>
                 </div>
                 <p class="card__description">Macacão Moto n°3.</p>
@@ -125,7 +123,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./luvamoto1.html" class="card">
               <img src="./imgmoto/luvamoto1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -139,13 +137,13 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./luvamoto2.html" class="card">
               <img src="./imgmoto/luvamoto2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
                     <h3 class="card__title">Luva QEPAE Fem. Multicores</h3>
-                    <span class="card__status">R$99,00</span>
+                    <span class="card__status">R$99,90</span>
                   </div>
                 </div>
                 <p class="card__description">Luva Moto n°2.</p>
@@ -153,7 +151,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./luvamoto3.html" class="card">
               <img src="./imgmoto/luvamoto3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
@@ -171,7 +169,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./botamoto1.html" class="card">
               <img src="./imgmoto/botamoto1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -185,7 +183,7 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./botamoto2.html" class="card">
               <img src="./imgmoto/botamoto2.png" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
@@ -199,13 +197,13 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./botamoto3.html" class="card">
               <img src="./imgmoto/botamoto3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
                     <h3 class="card__title">Bota Red Dragon Action</h3>        
-                    <span class="card__status">R$499,00</span>
+                    <span class="card__status">R$499,90</span>
                   </div>
                 </div>
                 <p class="card__description">Bota Moto n°3.</p>
