--- a/outlet.html
+++ b/outlet.html
@@ -19,8 +19,6 @@
           <li><a href="./moto.html">Moto</a></li>
           <li><a href="./kart.html">Kart</a></li>
           <li style="float:right"><a class="active" href="#about">🛒</a></li>
-          <li style="float:right"><a href="./login.html" class="cadlog">Login</a></li>
-          <li style="float:right"><a href="./cadastro.html" class="cadlog">Cadastro</a></li>
         </ul>
   </nav>
 
@@ -33,7 +31,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./balaclava1.html" class="card">
               <img src="./imgoutlet/balaclavaout1.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -47,12 +45,12 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./balaclava2.html" class="card">
               <img src="./imgoutlet/balaclavaout2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
                   <div class="card__header-text">
-                    <h3 class="card__title">Balaclava Aberta Eparco Vermelha </h3>
+                    <h3 class="card__title">Balaclava Aberta Sparco Vermelha </h3>
                     <span class="card__status">R$59,90</span>
                   </div>
                 </div>
@@ -61,7 +59,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./balaclava3.html" class="card">
               <img src="./imgoutlet/balaclavaout3.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
@@ -79,7 +77,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./conjunto1.html" class="card">
               <img src="./imgoutlet/conjuntout1.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -93,7 +91,7 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./conjunto2.html" class="card">
               <img src="./imgoutlet/conjuntout2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
@@ -107,13 +105,13 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./jaquetaout.html" class="card">
               <img src="./imgoutlet/jaquetaout1.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
                     <h3 class="card__title">Jaqueta de Couro Masculina Black Goth</h3>        
-                    <span class="card__status">R$350.00</span>
+                    <span class="card__status">R$349,90</span>
                   </div>
                 </div>
                 <p class="card__description">Jaqueta de Couro.</p>
@@ -125,7 +123,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./calcaout1.html" class="card">
               <img src="./imgoutlet/calcaout1.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -139,7 +137,7 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./calcaout2.html" class="card">
               <img src="./imgoutlet/calcaout2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
@@ -153,13 +151,13 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./macacaout.html" class="card">
               <img src="./imgoutlet/macacaoout1.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
                   <div class="card__header-text">
                     <h3 class="card__title">Macacão Texx Diana 2</h3>        
-                    <span class="card__status">R$1499,90</span>
+                    <span class="card__status">R$1.499,90</span>
                   </div>
                 </div>
                 <p class="card__description">Macacão Outlet n°1.</p>
@@ -171,7 +169,7 @@
         <!-- card -->
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="./botaout1.html" class="card">
               <img src="./imgoutlet/botaout1.jpg" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -185,7 +183,7 @@
             </a>      
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./botaout2.html" class="card">
               <img src="./imgoutlet/botaout2.jpg" class="card__image" alt="" />
               <div class="card__overlay">        
                 <div class="card__header">             
@@ -199,7 +197,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="./botaout3.html" class="card">
               <img src="./imgoutlet/botaout3.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                 
